--- a/Frontend-app/app.json
+++ b/Frontend-app/app.json
@@ -7,6 +7,7 @@
     "owner": "testaccount125",
     "icon": "./assets/icon.png",
     "newArchEnabled": true,
+    "main": "index.ts",
     "web": {
       "favicon": "./assets/favicon.png"
     },
