--- a/Frontend-app/app.json
+++ b/Frontend-app/app.json
@@ -4,7 +4,7 @@
     "slug": "mathematico-app",
     "version": "2.0.0",
     "orientation": "portrait",
-    "owner": "anupamnexa",
+    "owner": "eas-dev",
     "icon": "./assets/icon.png",
     "newArchEnabled": true,
     "main": "index.ts",
@@ -13,7 +13,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "5b57fab1-ba0d-456e-a1a1-2eac506e0a9e"
+        "projectId": "2b2cdce0-4d37-4b4b-a83e-305b26c855e9"
       }
     },
     "android": {
