--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -28,18 +28,18 @@
     "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.6.13",
     "axios": "^1.13.2",
-    "expo": "~54.0.30",
-    "expo-constants": "~18.0.12",
-    "expo-dev-client": "~6.0.20",
-    "expo-document-picker": "~14.0.8",
-    "expo-file-system": "~19.0.21",
-    "expo-font": "~14.0.10",
-    "expo-image-picker": "~17.0.10",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-secure-store": "~15.0.8",
-    "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.9",
-    "expo-updates": "~29.0.15",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.0",
+    "expo-dev-client": "~6.0.0",
+    "expo-document-picker": "~14.0.0",
+    "expo-file-system": "~19.0.0",
+    "expo-font": "~14.0.0",
+    "expo-image-picker": "~17.0.0",
+    "expo-linear-gradient": "~15.0.0",
+    "expo-secure-store": "~15.0.0",
+    "expo-splash-screen": "~31.0.0",
+    "expo-status-bar": "~3.0.0",
+    "expo-updates": "~29.0.0",
     "fs-extra": "^11.3.2",
     "lucide-react-native": "^0.562.0",
     "moment": "^2.30.1",
@@ -66,7 +66,6 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.1.2",
-    "eas-cli": "^16.28.0",
     "expo-build-properties": "~1.0.10",
     "jest-expo": "~54.0.16",
     "patch-package": "^8.0.1",
@@ -81,6 +80,14 @@
       "reactNativeDirectoryCheck": {
         "enabled": false
       }
+    },
+    "install": {
+      "exclude": [
+        "expo",
+        "expo-constants",
+        "expo-updates",
+        "react-native-worklets"
+      ]
     }
   },
   "description": "Mathematico mobile app powered by Expo SDK 54",
