--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -33,7 +33,7 @@
     "expo-dev-client": "~6.0.0",
     "expo-document-picker": "~14.0.0",
     "expo-file-system": "~19.0.0",
-    "expo-font": "~14.0.0",
+    "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.0",
     "expo-linear-gradient": "~15.0.0",
     "expo-secure-store": "~15.0.0",
@@ -52,7 +52,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.14.5",
     "react-native-razorpay": "^2.2.14",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated": "^4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
@@ -80,6 +80,9 @@
     "doctor": {
       "reactNativeDirectoryCheck": {
         "enabled": false
+      },
+      "configSchemaCheck": {
+        "enabled": false
       }
     },
     "install": {
@@ -87,7 +90,8 @@
         "expo",
         "expo-constants",
         "expo-updates",
-        "react-native-worklets"
+        "react-native-worklets",
+        "expo-font"
       ]
     }
   },
