--- a/Frontend-app/tsconfig.json
+++ b/Frontend-app/tsconfig.json
@@ -1,10 +1,8 @@
 {
+  "extends": "expo/tsconfig.base.json",
   "compilerOptions": {
     "target": "esnext",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,28 +14,17 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "baseUrl": "./src",
     "paths": {
-      "*": [
-        "*",
-        "admin/*",
-        "services/*",
-        "config/*"
-      ]
+      "*": ["*", "admin/*", "services/*", "config/*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": [
     "node_modules",
     "**/__tests__/*",
     "**/*.js",
     "**/*.jsx"
-  ],
-  "extends": "expo/tsconfig.base.json"
+  ]
 }
