--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -51,7 +51,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.14.5",
     "react-native-razorpay": "^2.2.14",
-    "react-native-reanimated": "^4.1.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
@@ -64,7 +64,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.19.30",
     "@types/react": "~19.1.2",
     "expo-build-properties": "~1.0.10",
     "jest-expo": "~54.0.16",
