--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,10 @@
     "vercel-build": "echo '✅ Build complete'",
     "postinstall": "echo '📦 Dependencies installed successfully'",
     "export-docs": "node scripts/export-swagger.js",
-    "test-api": "node -e \"require('./index.js'); console.log('✅ API loaded successfully');\""
+    "test-api": "node -e \"require('./index.js'); console.log('✅ API loaded successfully');\"",
+    "seed:production": "node scripts/seed-production.js",
+    "backup:database": "node scripts/backup-database.js",
+    "health:check": "node -e \"require('./utils/monitoring').checkDependencies().then(console.log)\""
   },
   "dependencies": {
     "axios": "^1.7.7",
