--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -13,6 +13,7 @@
     "build:dev": "eas build --platform android --profile development",
     "build:android": "eas build --platform android --profile production",
     "build:android-preview": "eas build --platform android --profile preview",
+    "build:production": "node scripts/build-production.js",
     "build:ios": "eas build --platform ios --profile production",
     "submit:android": "eas submit --platform android --profile production",
     "submit:ios": "eas submit --platform ios --profile production",
