--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
     "cloudinary": "^2.5.1",
