--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "express-rate-limit": "^7.4.1",
     "form-data": "^4.0.1",
     "helmet": "^8.0.0",
+    "ioredis": "^5.9.3",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
