--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,12 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "vercel-build": "echo '✅ Build complete'",
-    "postinstall": "echo '📦 Dependencies installed successfully'",
-    "export-docs": "node scripts/export-swagger.js",
-    "test-api": "node -e \"require('./index.js'); console.log('✅ API loaded successfully');\"",
-    "seed:production": "node scripts/seed-production.js",
-    "backup:database": "node scripts/backup-database.js",
-    "health:check": "node -e \"require('./utils/monitoring').checkDependencies().then(console.log)\""
+    "postinstall": "echo '📦 Dependencies installed successfully'"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -49,7 +44,7 @@
     "nodemon": "^3.1.9"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   },
   "keywords": [
     "mathematico",
