--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,33 +10,22 @@
     "postinstall": "echo '📦 Dependencies installed successfully'"
   },
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.1",
+    "@upstash/redis": "^1.34.3",
     "axios": "^1.7.7",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^2.4.3",
-    "busboy": "^1.6.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.21.1",
-    "form-data": "^4.0.1",
     "helmet": "^8.0.0",
-    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "razorpay": "^2.9.6",
-    "react-native-razorpay": "^2.3.0",
-    "sharp": "^0.33.5",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.0.3",
-    "validator": "^13.15.15",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "xtend": "^4.0.2"
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
