--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,13 +25,14 @@
     "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
     "razorpay": "^2.9.6",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.x || 22.x"
   },
   "keywords": [
     "mathematico",
