--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "@upstash/redis": "^1.34.3",
     "axios": "^1.7.7",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
