--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,7 +27,8 @@
     "nodemailer": "^6.9.16",
     "razorpay": "^2.9.6",
     "validator": "^13.15.15",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
