--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.1.0",
     "mongoose": "^8.8.4",
     "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
